@@ -1,3 +1,5 @@
+2046 [x264] blu-ray device: added 1440x1080 as supported resolution
+            blu-ray device: enhanced --sar detection
 2045 [x264] added --subme 11 (requires x264 revision 2037+)
 2044 [Lame] fixed always applying bitrate 128 in ABR mode
 2043 [Flac] enhanced output handling if file already exists
